# kuaria

./: .gitignore  kuaria dev guide.txt  kuaria documentation.txt  kuariaDemo.py  kuariaDocs.txt  main.py  pyproject.toml  readme.md  readme.txt
backend/: configurer.py  connector.py
core/: configurer.py  connector.py
data/: commonCreds.txt  credPass.txt
kuaria/: main.py
kuaria/core/: configurer.py  connector.py  scanner.py
kuaria/utils/: commonCreds.py  customEncryption.py
utils/: commonCreds.py  customEncryption.py
