[build-system]
requires = ["setuptools>=65.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kuaria"
version = "1.0.1"
description = "simple command line tool for network automation"
authors = [
    {name="Yigit Ata Cavdar", email="yigitatacavdar@gmail.com"}
]
readme = "readme.txt"
requires-python = ">=3.8"
license = {file = "LICENSE"}

dependencies = [
    "napalm",
    "netmiko",
    "python-nmap",
    "ntc-templates",
    "tabulate"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Topic :: System :: Networking",
    "Intended Audience :: System Administrators"
]

[project.scripts]
kuaria = "kuaria.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["kuaria*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"kuaria" = ["data/*.txt"]